<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/scrollStyle"
    tools:context="com.example.android.footballquiz.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Question1"
            style="@style/questions"
            android:padding="16dp"
            android:text="@string/question1"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg1"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Brazil"
                android:onClick="selectOption1"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="England"
                android:id="@+id/answer1"
                android:onClick="selectOption1"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Portugal"
                android:onClick="selectOption1"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mexico"
                android:onClick="selectOption1"
                style="@style/radioStyle"
                />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Question2"
            android:padding="16dp"
            style="@style/questions"
            android:text="@string/question2"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg2"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Four"
                android:onClick="selectOption2"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Five"
                android:id="@+id/answer2"
                android:onClick="selectOption2"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectOption2"
                android:text="Seven"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Two"
                android:onClick="selectOption2"
                style="@style/radioStyle"
                />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Question3"
            android:padding="16dp"
            style="@style/questions"
            android:text="@string/question3"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:id="@+id/rg3"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Zlatan Ibrahimovic"
                android:onClick="selectOption3"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Messi"
                android:onClick="selectOption3"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ronaldo"
                android:id="@+id/answer3"
                android:onClick="selectOption3"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lewandowski"
                android:onClick="selectOption3"
                style="@style/radioStyle"
                />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Question4"
            android:padding="16dp"
            style="@style/questions"
            android:text="@string/question4"/>
        <RadioGroup
            android:id="@+id/rg4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Three"
                android:onClick="selectOption4"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Four"
                android:id="@+id/answer4"
                android:onClick="selectOption4"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Five"
                style="@style/radioStyle"
                android:onClick="selectOption4"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Six"
                android:onClick="selectOption4"
                style="@style/radioStyle"

                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Question5"
            android:padding="16dp"
            style="@style/questions"
            android:text="@string/question5"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg5"
            >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Real Madrid"
                android:onClick="selectOption5"
                style="@style/radioStyle"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Juventus"
                android:onClick="selectOption5"
                style="@style/radioStyle"

                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Chelsea"
                style="@style/radioStyle"
                android:onClick="selectOption5"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FC Barcelona"
                android:id="@+id/answer5"
                android:onClick="selectOption5"
                style="@style/radioStyle"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Question6"
            android:padding="16dp"
            style="@style/questions"
            android:text="@string/question6"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check1"
            android:id="@+id/checkbox1"
            android:onClick="selectOption6"
            style="@style/radioStyle"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check2"
            android:id="@+id/checkbox2"
            style="@style/radioStyle"
            android:onClick="selectOption6"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check3"
            android:onClick="selectOption6"
            android:id="@+id/checkbox3"
            style="@style/radioStyle"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check4"
            android:id="@+id/checkbox4"
            style="@style/radioStyle"
            android:onClick="selectOption6"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Question7"
            android:padding="16dp"
            style="@style/questions"
            android:text="@string/question7"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer7"
            android:hint="Type Answer Here(In Figures)"
            style="@style/radioStyle"
            android:textColorHint="#FFEB3B"
            />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CHECK"
                android:onClick="check"
                />

            </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            android:onClick="displayScore"
            />
    </LinearLayout>

</ScrollView>
